<?xml version="1.0"?>
<package>
  <name>sfm_example</name>
  <version>0.0.0</version>
  <description>The sfm_example package, made by Nghai Ho</description>
  o
  <maintainer email="pvphan@users.noreply.github.com">pvphan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>r4d_common</build_depend>
  <run_depend>r4d_common</run_depend>

  <export></export>
</package>
